Retourner les journaux en cours de chargements lors de la première requête.